--- a/madhub/package.json
+++ b/madhub/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.7",
-    "expo-status-bar": "~1.11.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "4.4.2",
+    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-navigation/stack": "^6.3.20",
+    "expo": "~49.0.15",
+    "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.5.4",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
