--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,21 +1,25 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node index.ts",
+    "dev": "nodemon index.js",
     "start": "node index.js",
-    "build": "tsc",
     "prebuild": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vision": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
+    "firebase-tools": "^13.3.1",
     "nodemon": "^3.0.2"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
